--- a/src/main/resources/templates/reports/sale-stock-report.html
+++ b/src/main/resources/templates/reports/sale-stock-report.html
@@ -43,23 +43,27 @@
     <h2 th:text="${date}" class="d-inline"></h2>
     <h2 class="font-normal d-inline"> tarixinə seçilmiş malların satış miqdarı və anbar qalığı</h2>
 </div>
-<table class="table">
-    <thead>
-    <tr>
-        <th>Mal kodu</th>
-        <th>Mal adı</th>
-        <th class="text-right">Satış</th>
-        <th class="text-right">Qalıq</th>
-    </tr>
-    </thead>
-    <tbody>
-    <tr th:each="item:${data}">
-        <td th:utext="${item.invCode}"></td>
-        <td th:utext="${item.invName}"></td>
-        <td class="text-right" th:utext="${#numbers.formatDecimal(item.saleQty, 1, 0)}"></td>
-        <td class="text-right" th:utext="${#numbers.formatDecimal(item.whsQty, 1, 0)}"></td>
-    </tr>
-    </tbody>
-</table>
+<div th:each="group:${data}">
+    <br>
+    <h2 th:text="${group.groupName}"></h2>
+    <table class="table">
+        <thead>
+        <tr>
+            <th>Mal kodu</th>
+            <th>Mal adı</th>
+            <th class="text-right">Satış</th>
+            <th class="text-right">Qalıq</th>
+        </tr>
+        </thead>
+        <tbody>
+        <tr th:each="item:${group.reportData}">
+            <td th:utext="${item.invCode}"></td>
+            <td th:utext="${item.invName}"></td>
+            <td class="text-right" th:utext="${#numbers.formatDecimal(item.saleQty, 1, 0)}"></td>
+            <td class="text-right" th:utext="${#numbers.formatDecimal(item.whsQty, 1, 0)}"></td>
+        </tr>
+        </tbody>
+    </table>
+</div>
 </body>
 </html>
