--- a/src/main/resources/templates/reports/deleted-lines-from-picking-report.html
+++ b/src/main/resources/templates/reports/deleted-lines-from-picking-report.html
@@ -7,6 +7,7 @@
         {
             border-style: solid;
             border-width: 1px;
+            padding: 0 10px;
         }
         .table {
             border-collapse: collapse;
@@ -20,6 +21,10 @@
 
         .text-right {
             text-align: right;
+        }
+
+        .text-center {
+            text-align: center;
         }
 
         .margin-10 {
