--- a/src/main/resources/templates/reports/restored-prices.html
+++ b/src/main/resources/templates/reports/restored-prices.html
@@ -7,6 +7,7 @@
         {
             border-style: solid;
             border-width: 1px 0;
+            padding: 0 10px;
         }
         .table {
             border-collapse: collapse;
@@ -20,6 +21,10 @@
 
         .text-right {
             text-align: right;
+        }
+
+        .text-center {
+            text-align: center;
         }
 
         .margin-10 {
@@ -41,25 +46,25 @@
 <body>
 <div class="margin-10">
     <h2 th:text="${date}" class="d-inline"></h2>
-    <h2 class="font-normal d-inline"> tarixinə POS-dan qaytarılmış mallar</h2>
+    <h2 class="font-normal d-inline"> tarixinə vaxtı bitmiş endirimli qiymətlər</h2>
 </div>
 <table class="table">
     <thead>
     <tr>
         <th>Mal kodu</th>
         <th>Mal adı</th>
-        <th>Miqdar</th>
-        <th>Əməliyyat vaxtı</th>
-        <th>Mağaza</th>
+        <th>Qiymət kodu</th>
+        <th>Endirimli qiymət</th>
+        <th>Bərpa edilmiş qiymət</th>
     </tr>
     </thead>
     <tbody>
     <tr th:each="item:${data}">
         <td th:utext="${item.invCode}"></td>
         <td th:utext="${item.invName}"></td>
-        <td th:utext="${#numbers.formatDecimal(item.qty, 1, 0)}"></td>
-        <td class th:utext="${item.trxDate}"></td>
-        <td class th:utext="${item.store}"></td>
+        <td class="text-center" th:utext="${item.priceCode}"></td>
+        <td class="text-center" th:utext="${item.oldPrice}"></td>
+        <td class="text-center" th:utext="${item.newPrice}"></td>
     </tr>
     </tbody>
 </table>
