--- a/src/main/resources/templates/reports/deleted-lines-from-picking-report.html
+++ b/src/main/resources/templates/reports/deleted-lines-from-picking-report.html
@@ -67,7 +67,7 @@
             <th>Yığan</th>
             <th>Yoxlayan</th>
             <th>Silinmə səbəbi</th>
-            <th>Sifarişçi Anbar/Təmsilçi</th>
+            <th>Sifarişçi Anbar/Təmsilçi/Xərc mərkəzi</th>
         </tr>
         </thead>
         <tbody>
