--- a/src/main/resources/templates/reports/external-purchase-report.html
+++ b/src/main/resources/templates/reports/external-purchase-report.html
@@ -46,7 +46,7 @@
 <body>
 <div class="margin-10">
     <h2 th:text="${date}" class="d-inline"></h2>
-    <h2 class="font-normal d-inline"> tarixinə alınmış mallar (Daxili təchizat)</h2>
+    <h2 class="font-normal d-inline"> tarixinə alınmış mallar (Xarici satınalma)</h2>
 </div>
 
 <br>
