--- a/src/main/resources/templates/reports/internal-purchase-report.html
+++ b/src/main/resources/templates/reports/internal-purchase-report.html
@@ -65,6 +65,7 @@
         <th>Təmsilçi kodu</th>
         <th>Təmsilçi adı</th>
         <th>Sənəd №</th>
+        <th>Açıqlama</th>
     </tr>
     </thead>
     <tbody>
@@ -81,6 +82,7 @@
         <td th:utext="${item.sbeCode}"></td>
         <td th:utext="${item.sbeName}"></td>
         <td th:utext="${item.trxNo}"></td>
+        <td th:utext="${item.description}"></td>
     </tr>
     </tbody>
 </table>
